<resources>
    <string name="app_name">MoPros</string>
    <string name="no_internet">ネットワークに接続できません。</string>
    <!--Login-->
    <string name="txt_id">ID</string>
    <string name="txt_password">パスワード</string>
    <string name="btn_login">ログイン</string>
    <string name="check_id_pass">IDを入力してください。</string>
    <!--Main menu-->
    <string name="txt_mainmenu_header">メインメニュー</string>
    <string name="btn_logout">ログアウト</string>
    <string name="btn_sort">表示順並べ替え</string>
    <string name="btn_report_download">積込作業報告</string>
    <string name="btn_report_work">運送作業報告</string>
    <string name="btn_status">状況参照</string>
    <string name="btn_out_office">出・退勤報告</string>
    <string name="txt_note1">※ 配送順に並べ替えると便利です</string>
    <string name="txt_note2">報告:%1$s</string>
    <string name="txt_note3">配送進捗:%1$s/%2$s</string>
    <string name="confirm_exit">終了してもよろしいですか？</string>

    <string name="txt_sort_header">表示順並べ替え</string>
    <string name="txt_report_download_header">積込作業報告</string>
    <string name="txt_report_work_header">配送作業報告</string>
    <string name="txt_status_header">配送状況参照</string>
    <string name="txt_out_office_header">出・退勤報告</string>

    <string name="btn_sort_complete">完了</string>
    <string name="btn_sort_ignore_no_transport">配送無し解除</string>
    <string name="btn_sort_no_transport">配送無し</string>
    <string name="btn_sort_collection">集荷指示</string>
    <string name="btn_sort_delete_collection">指示削除</string>
    <string name="btn_sort_select">選択</string>

    <string name="btn_start_load">積込作業開始</string>
    <string name="btn_start_load_complete">積込作業終了</string>
    <string name="btn_report">報告</string>
    <string name="btn_noreport">報告なし</string>
    <string name="btn_deliveryplace">納品先</string>
    <string name="btn_load_supplier_report_decice">報告該当先決定</string>
    <string name="txt_load_suplier1">積替え付帯作業は</string>
    <string name="txt_load_suplier2">報告をする該当納品先を選択してください</string>
    <string name="txt_list_time1">積込付帯作業は</string>
    <string name="txt_list_time2">分</string>
    <string name="txt_list_time3">でした。</string>
    <string name="txt_list_time4">作業報告をしてください。</string>

    <string name="btn_break">休憩</string>
    <string name="btn_daily_report_return">帰着</string>
    <string name="txt_office_header" />
    <string name="btn_report_in">出勤報告</string>
    <string name="btn_report_out">退勤報告</string>
    <string name="txt_in_office">出勤</string>
    <string name="txt_out_office">退勤</string>
    <string name="txt_msg_header">メッセージ</string>
    <string name="btn_ok">OK</string>
    <string name="btn_ng">NG</string>
    <string name="btnNextMes"> <u>次へ&gt;</u></string>
    <string name="btnBackMes"> <u>&lt;戻る</u></string>
    <string name="btn_daily_report_decide">決定</string>
    <!--Status-->
    <string name="btn_status_ok">OK</string>
    <string name="txt_delivery_date">配送日</string>
    <string name="txt_choose_destination">行先を選択してください。</string>

    <string name="btn_departure">出発</string>
    <string name="btn_correction">修正</string>
    <string name="btn_arrival">到着</string>
    <string name="btn_pending">保留(行先選択)</string>
    <string name="btn_deliver_start">納品開始</string>
    <string name="waiting_start">待機開始</string>
    <string name="btn_deliver_complete">納品完了</string>
    <string name="txt_extra_deliver_report">付帯作業報告</string>
    <string name="txt_time_deliver">納品作業時間は%s分でした。</string>
    <string name="report_extra_work_at_time_delivery">納品時の付帯作業報告をしてください。</string>

    <string name="txt_shelf">棚入れ</string>
    <string name="txt_forklift">フォークリフト</string>
    <string name="txt_band_bara">バンド・バラし</string>
    <string name="txt_millefeuille">ミルフィーユ</string>
    <string name="txt_yes">はい</string>
    <string name="txt_no">いいえ</string>
    <string name="txt_use_coin_p">コインP使用</string>
    <string name="btn_report_palette">パレ報告</string>
    <string name="btn_no_report">報告なし</string>
    <string name="btn_decision">決定</string>
    <string name="txt_deliver_report">納品報告</string>
    <string name="company_palette">自社パレット</string>
    <string name="sp_delivery">納品</string>
    <string name="sp_recovery">回収</string>
    <string name="rental_palette">レンタルパレット</string>
    <string name="btn_done">完了</string>
    <string name="btn_start">開始</string>
    <string name="btn_finish">終了</string>
    <string name="txt_message">未確認のメッセージです</string>
    <string name="txt_message_confirm">確認済みのメッセージです</string>
    <string name="txt_destination_chart" >納品先カルテ</string>

    <string name="basic_info">基本情報</string>
    <string name="surrounding_map">周辺地図</string>
    <string name="at_normal_temperature">常温</string>
    <string name="frozen_chilled">冷凍チルド</string>
    <string name="special_work">特殊業務</string>
    <string name="txt_message_header">メッセージ確認</string>
    <string name="txt_pick_up_date">集荷日</string>
    <string name="txt_deliver_report_header">運送作業報告</string>
    <string name="txt_work_time">積替え</string>

    <string name="ok">OK</string>
    <string name="yes">@string/txt_yes</string>
    <string name="no">@string/txt_no</string>
    <string name="loading">Loading</string>
    <string name="txt_designation">%s指定</string>
    <string name="txt_weight_format">%dkg</string>
    <string name="txt_cs_format">%sCs</string>
    <string name="txt_error_loading_data">エラー</string>
    <string name="pickup_store_name_format">[集]%s</string>
    <string name="deliver_store_name_format">[配]%s</string>
    <string name="total_deliver_format">%d件以上指定時</string>
    <string name="btn_pick_up_start">集荷開始</string>
    <string name="btn_pick_up_finish">集荷終了</string>
    <string name="txt_pick_up_report">集荷報告</string>
    <string name="pick_up_1">集荷1</string>
    <string name="pick_up_2">集荷2</string>
    <string name="default_value">0</string>
    <string name="thank_you_for_hard_working">お疲れ様でした。</string>

    <!-- table basic info-->
    <string name="shop_type">店タイプ</string>
    <string name="nohin_kind">納品方法</string>
    <string name="enter_kind">入場管理</string>
    <string name="sejo_kasho">鍵施錠箇所</string>
    <string name="niuke_kigen">荷受限界時間</string>
    <string name="sharyo_kisei">車両規制</string>
    <string name="security_system">警備システム</string>
    <string name="security_system_no">なし</string>
    <string name="security_system_yes">ありの表記</string>

    <!-- table work generate -->
    <string name="table_work_generate_title">納品時付帯作業の有無</string>
    <string name="table_work_generate_item_nohinwaitkbn">慢性的な待機時間</string>
    <string name="table_work_generate_item_nohinshiteikbn">納品時間指定</string>
    <string name="table_work_generate_item_plshiteikbn">ミルフィーユ指定</string>
    <string name="table_work_generate_item_tanasagyokbn">棚入れ、先出先入、しまい込み</string>
    <string name="table_work_generate_item_liftsagyokbn">納品先でのフォーク作業</string>
    <string name="table_work_generate_item_bandsagyokbn">バンド切り、バラし作業</string>
    <string name="table_work_generate_item_coinparkkbn">コインパークの使用</string>

    <!-- table deliver position -->
    <string name="table_deliver_position_title">納品手順</string>
    <!-- table important note -->
    <string name="table_deliver_important_note_title">特別条件/重点注意事項</string>
    <!-- table deliver position map -->
    <string name="table_deliver_position_map_title">納品手順図</string>
    <string name="table_deliver_position_map_key_position_map">手順図</string>
    <!-- table deliver inner design map -->
    <string name="table_deliver_inner_design_map_title">構内図</string>
    <string name="system_error">System Error</string>
    
    <!-- activtiy DeliveryChartActivity -->
    <string name="delivery_chart_lable_adress">納品先住所 :</string>
    <string name="delivery_chart_lable_zip">納品先郵便番号 :</string>
    <string name="item_done_click">Are you sure to deliver again?</string>

    <!-- status -->
    <string name="txt_pending_kanji">保</string>
    <string name="txt_done_kanji">完</string>
    <string name="txt_undone_kanji">未</string>
    <string name="txt_no_kanji">無</string>
    <string name="txt_yes_kanji">有</string>
    <string name="blank">空白</string>
    <string name="dialog_cannot_choose">%1$s分以上の選択は不可。</string>
    <string name="btn_report_quantity">数量報告</string>
</resources>
