<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context="jp.co.ienter.mopros.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/colorHeagerBg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextFontStyleHeader"
                android:text="@string/txt_mainmenu_header"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <include layout="@layout/include_general_info"
                android:layout_width="@dimen/my_button_width"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                style="@style/ButtonFontStyle"
                android:text="@string/btn_sort"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/txt_note1"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnReportDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                style="@style/ButtonFontStyle"
                android:text="@string/btn_report_download"/>

            <TextView
                android:id="@+id/txtLoadStatus"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/txt_note2"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnReportWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                style="@style/ButtonFontStyle"
                android:text="@string/btn_report_work"/>

            <TextView
                android:id="@+id/txtStatusProgress"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/txt_note3"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                style="@style/ButtonFontStyle"
                android:text="@string/btn_status"/>

            <Button
                android:id="@+id/btnOutOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                style="@style/ButtonFontStyle"
                android:text="@string/btn_out_office"/>

        </LinearLayout>

        <!--<include layout="@layout/mainmenu_logout_button"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorHeagerBg">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button_mainmenu"
                style="@style/TextFontStyleHeader"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_logout"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
