<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_parent"
    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="end"
            android:id="@+id/tv_label_radio"
            android:text="@string/txt_millefeuille" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                style="@style/AppWidget.AppRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_yes"
                android:text="@string/txt_yes" />

            <RadioButton
                style="@style/AppWidget.AppRadioButton"
                android:layout_width="wrap_content"
                android:id="@+id/rb_no"
                android:layout_height="wrap_content"
                android:text="@string/txt_no" />
        </RadioGroup>

</LinearLayout>