<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="50dp"
        style="@style/TextFontStyleHeader"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/txt_destination_chart"
        android:background="@color/colorHeagerBg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_delivery_name"
        android:background="@drawable/bg_red_brown_border_primary"
        android:gravity="center"
        android:textColor="@color/colorWhite"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_blue_border_primary"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_delivery_address"
                android:text="@string/delivery_chart_lable_adress"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_delivery_zip"
                android:text="@string/delivery_chart_lable_zip"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_destination_chart_fl_container"/>
</LinearLayout>