<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/deliver_rc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/border_primary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/waiting_start"
            android:textColor="@color/colorRed" />

        <jp.co.ienter.mopros.utils.custom.CustomChronometer
            android:id="@+id/fragment_deliver_start_chronometer_waiting_count_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed" />
    </LinearLayout>

    <Button
        style="@style/ButtonFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/fragment_deliver_arrival_btn_start_deliver"
        android:background="@drawable/my_button"
        android:text="@string/btn_deliver_start" />

    <Button
        style="@style/ButtonFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/fragment_deliver_arrival_btn_pending"
        android:background="@drawable/my_button"
        android:text="@string/btn_pending" />
</LinearLayout>

