<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context="jp.co.ienter.mopros.activity.OutOfficeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorHeagerBg"
            android:gravity="center">

            <TextView
                style="@style/TextFontStyleHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_out_office_header" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include layout="@layout/include_general_info"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnReportIn"
                    style="@style/ButtonFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_button"
                    android:paddingVertical="30dp"
                    android:text="@string/btn_report_in" />

                <Button
                    android:id="@+id/btnReportOut"
                    style="@style/ButtonFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_button"
                    android:paddingVertical="30dp"
                    android:text="@string/btn_report_out" />
            </LinearLayout>
        </RelativeLayout>


        <include layout="@layout/mainmenu_message_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
